--- a/CUE-Keyboard-Audio-Spectrum/CUE-Keyboard-Audio-Spectrum.csproj
+++ b/CUE-Keyboard-Audio-Spectrum/CUE-Keyboard-Audio-Spectrum.csproj
@@ -38,6 +38,9 @@
     <Reference Include="Bass.Net, Version=2.4.12.3, Culture=neutral, PublicKeyToken=b7566c273e6ef480, processorArchitecture=MSIL">
       <HintPath>packages\Bass.NetWrapper.2.4.12.5\lib\net45\Bass.Net.dll</HintPath>
     </Reference>
+    <Reference Include="CUE.NET, Version=1.1.3.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\CUE.NET.1.1.3.1\lib\net45\CUE.NET.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
@@ -94,6 +97,8 @@
       <ErrorText>Ce projet fait référence à des packages NuGet qui sont manquants sur cet ordinateur. Utilisez l'option de restauration des packages NuGet pour les télécharger. Pour plus d'informations, consultez http://go.microsoft.com/fwlink/?LinkID=322105. Le fichier manquant est : {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('packages\BASS.ASIO.1.3.1.2\build\BASS.ASIO.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\BASS.ASIO.1.3.1.2\build\BASS.ASIO.targets'))" />
+    <Error Condition="!Exists('packages\CUE.NET.1.1.3.1\build\net45\CUE.NET.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\CUE.NET.1.1.3.1\build\net45\CUE.NET.targets'))" />
   </Target>
   <Import Project="packages\BASS.ASIO.1.3.1.2\build\BASS.ASIO.targets" Condition="Exists('packages\BASS.ASIO.1.3.1.2\build\BASS.ASIO.targets')" />
+  <Import Project="packages\CUE.NET.1.1.3.1\build\net45\CUE.NET.targets" Condition="Exists('packages\CUE.NET.1.1.3.1\build\net45\CUE.NET.targets')" />
 </Project>
