--- a/CUE-Keyboard-Audio-Spectrum/packages.config
+++ b/CUE-Keyboard-Audio-Spectrum/packages.config
@@ -3,4 +3,5 @@
   <package id="BASS.ASIO" version="1.3.1.2" targetFramework="net472" />
   <package id="BASS.Native" version="2.4.13.10" targetFramework="net472" />
   <package id="Bass.NetWrapper" version="2.4.12.5" targetFramework="net472" />
+  <package id="CUE.NET" version="1.1.3.1" targetFramework="net472" />
 </packages>
